--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/setiadijoe/school-app#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
     "express": "^4.16.1",
     "pg": "^7.3.0",
     "sequelize": "^4.13.5"
