upload to heroku

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "express": "^4.16.1",
     "express-session": "^1.15.6",
     "pg": "^7.3.0",
-    "sequelize": "^4.13.5"
+    "sequelize": "^4.13.5",
+    "sequelize-cli": "^3.0.0"
   }
 }
